[tool.pdm]
distribution = false
[tool.pdm.scripts]
_.env_file = ".env"
socketio = 'uvicorn fliji_sockets.main:asgi_app --proxy-headers --host 0.0.0.0 --port 8097 --reload'
socketio-prod = 'uvicorn fliji_sockets.main:asgi_app --proxy-headers --host 0.0.0.0 --port 80'
docs = "sphinx-build -b html docs/source docs/_build"
test = "pytest -s tests/test_main.py"

[project]
name = "fliji-sockets"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "", email = "none" },
]
dependencies = [
    "python-socketio[asyncio]>=5.12.1",
    "uvicorn[standard]>=0.34.0",
    "pymongo>=4.11",
    "httpx>=0.28.1",
    "nats-py>=2.9.0",
    "sentry-sdk>=2.20.0",
    "pydantic>=2.10.6",
    # python-socketio dependencies
    "redis>=5.2.1",
    "websocket-client>=1.8.0",
    "PyJWT>=2.10.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "Proprietary" }


[dependency-groups]
dev = [
    "sphinx>=8.1.3",
    "autodoc-pydantic>=2.2.0",
    "pytest>=8.3.4",
    "starlette>=0.45.3",
    "ruff>=0.9.4",
]
